# pi486

./: Cargo.toml  LICENSE  README.md  flake.nix
esp32-appliance/: esp32-appliance.ino
esp32-writer/: esp32-writer.ino
src/: bridge.rs  main.rs  protocol.rs  serial.rs  socket.rs
writer-ui/: index.html  package-lock.json  package.json
writer-ui/src/: App.tsx  index.css
writer-ui/src/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  select.tsx
writer-ui/src/lib/: serial.ts
